2024-09-26 Konstantin Kushnir <chpock@gmail.com>
	* Fix a bug where temporary files were not deleted when installing
	* Add command --version
	* Add command --uninstall

2024-09-22 Konstantin Kushnir <chpock@gmail.com>
	* Bumped version to 2.2.0

2024-09-23 Konstantin Kushnir <chpock@gmail.com>
	* RELEASE TAG 2.1.0

2024-09-23 Konstantin Kushnir <chpock@gmail.com>
	* Add install/upgrade functionality

2024-09-22 Konstantin Kushnir <chpock@gmail.com>
	* Bumped version to 2.1.0
	* Fix tkcon compatibility with Tcl9
	* Add more release automations
	* Use Tcl9 by default in build script

2024-09-22 Konstantin Kushnir <chpock@gmail.com>
	* RELEASE TAG 2.0.0

2024-09-22 Konstantin Kushnir <chpock@gmail.com>
	* Use macOS 10.13 for build as Tk9 is not compatible with macOS 10.12
	* Update Tcl8.6 to 8.6.15
	* Add release packer

2024-09-21 Konstantin Kushnir <chpock@gmail.com>
	* Add ::cookit::pkgconfig
	* Refactor code and the wrap command

2024-09-15 Konstantin Kushnir <chpock@gmail.com>
	* Standardize root mount point as //cookit:/
	* Standardize builtin commands --wrap and --stats
	* Don't build i386-apple-darwin10.6 platform by default as it will not be
	supported in Tk9.0

2024-09-14 Kontantin Kushnir <chpock@gmail.com>
	* Add build for Tcl9 (macOS doesn't work yet)
	* Normalize platform names
	* Add x86_64-apple-darwin10.6 platform

2024-09-09 Konstantin Kushnir <chpock@gmail.com>
	* Update twapi to 5.0a1

2024-09-08 Konstantin Kushnir <chpock@gmail.com>
	* Add separate versions for console and GUI
	* Optimize encodings storage

2024-09-07 Konstantin Kushnir <chpock@gmail.com>
	* Rebrand to cookit 2.0 and change license

2024-08-23 Konstantin Kushnir <chpock@gmail.com>
	* Remove tkdnd / tktable packages from build flow
	* Add tclhttps package

2024-08-17 Konstantin Kushnir <chpock@gmail.com>
	* Add console binaries for Windows x86/x86_64 platforms

2024-08-15 Konstantin Kushnir <chpock@gmail.com>
	* Add tdom

2024-08-12 Konstantin Kushnir <chpock@gmail.com>